--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-26  Peter O'Gorman  <peter@pogma.com>
+
+	* m4/ltdl.m4: Don't use the dyld loader on darwin 8 or later.
+
 2004-08-25  Paolo Bonzini  <bonzini@gnu.org>
 
 	* config/ltmain.in (piecewise linking): Use a GNU ld script if
