--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -5210,12 +5210,16 @@ configured for your platform, and @code{~/bin} is a directory in your
 @example
 trick$ cd ~/bin
 trick$ sed 's%^\(macro_version=\).*$%\1@@VERSION@@%;
-            s%^\(macro_revision=\).*$%\1@@TIMESTAMP@@%;
+            s%^\(macro_revision=\).*$%\1@@package_revision@@%;
             /^# ltmain\.sh/q' /home/src/libtool/libtool > libtool
 trick$ echo '. /home/src/libtool/ltmain.in' >> libtool
 trick$ chmod +x libtool
 trick$ libtool --version
-ltmain.sh (GNU @@PACKAGE@@) @@VERSION@@@@TIMESTAMP@@
+ltmain.sh (GNU @PACKAGE@@TIMESTAMP@) @VERSION@
+
+Copyright (C) 2004  Free Software Foundation, Inc.
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 trick$
 @end example
 @end itemize
