--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-08-27  Gary V. Vaughan  <gary@gnu.org>
 
+	* doc/libtool.texi (Cheap tricks): Escape the `@' for texinfo.
+
 	* doc/libtool.texi (Cheap tricks): Fix the instructions for making
 	a ltmain.in wrapping libtool in light of recent changes to the
 	version checking code.
