--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+GNU Libtool
+***********
+
+1. Introduction
+===============
+
 This is GNU Libtool, a generic library support script.  Libtool hides
 the complexity of using shared libraries behind a consistent, portable
 interface.
@@ -5,61 +11,6 @@ interface.
 To use libtool, add the new generic library building commands to your
 Makefile, Makefile.in, or Makefile.am.  See the documentation for
 details.
-
-Libtool supports building static libraries on all platforms.
-
-Shared library support has been implemented for these platforms:
-  AIX 3.x, 4.x (*-*-aix3*, *-*-aix4*)
-  BeOS (*-*-beos*)
-  BSD/OS 2.1, 3.x, 4.x (*-*-bsdi2.1, *-*-bsdi3*, *-*-bsdi4*)
-  Darwin 5.x, 6.x a.k.a Mac OS X (*-*-darwin*) [see note]
-  Digital/UNIX 3.x, 4.x, a.k.a. OSF/1 (*-*-osf3*, *-*-osf4*)
-  DG/UX R4.11, R4.12, R4.20 (*-*-dguxR411*, *-*-dguxR412*, *-*-dguxR420*)
-  FreeBSD 2.x, 3.x, 4.x (*-*-freebsd2*, *-*-freebsd3*, *-*-freebsd4*)
-  GNU Hurd (*-*-gnu*)
-  GNU/Linux ELF (*-*-linux-gnu*, except aout, coff, and oldld)
-  HP-UX 9.x, 10.x, 11.x (*-*-hpux9*, *-*-hpux10*, *-*-hpux11*) [see note]
-  IRIX 5.x, 6.x (*-*-irix5*, *-*-irix6*)
-  NCR MP-RAS 3.x (*-ncr-sysv4.3*) [see note]
-  NEWS-OS Release 6 (*-*-newsos6)
-  Motorola System V 4 (mk88-motorola-sysv4) [see note]
-  NetBSD 1.x (*-*-netbsd*)
-  OpenBSD 2.x (*-*-openbsd*)
-  OS/2 using EMX (*-*-os2*)
-  Reliant Unix (*-sni-sysv4) [see note]
-  SCO OpenServer 5.x (*-*-sco3.2v5*)
-  SCO UnixWare 7.x (*-*-sysv5*)
-  Solaris 2.x (*-*-solaris2*)
-  SunOS 4.x, a.k.a. Solaris 1.x  (*-*-sunos4*)
-  UnixWare 2.x (*-*-sysv4.2uw2*)
-  UTS 4.x (*-*-uts4*)
-  All ELF targets that use both the GNU C compiler (gcc) and GNU ld
-
-NOTE: Some HP-UX sed programs are horribly broken, and cannot handle
-libtool's requirements, so users may report unusual problems.  There
-is no workaround except to install a working sed (such as GNU sed) on
-these systems.
-
-NOTE: The vendor-distributed NCR MP-RAS cc programs emits copyright
-on standard error that confuse tests on size of conftest.err.  The
-workaround is to specify CC when run configure with CC='cc -Hnocopyr'.
-
-NOTE: Due to a bug in autoconf cc isn't supported on Motorola System V 4.
-You can only use gcc. This bug will hopefully be fixed in autoconf 2.14.
-
-NOTE: Any earlier DG/UX system with ELF executables, such as R3.10 or
-R4.10, is also likely to work, but hasn't been explicitly tested.
-
-NOTE: Libtool has only been tested with the Siemens C-compiler and
-an old version of gcc provided by Marco Walther you can find on
-ftp://ftp.mch.sni.de/sni/mr/pd/gnu/gcc/gcc.2.7.2.3 on Reliant Unix.  
-
-NOTE: libtool.m4, ltdl.m4 and the configure.ac files are marked to use
-autoconf-mode, which is distributed with GNU Emacs 21, and all recent
-releases of XEmacs.
-
-NOTE: In some cases support is more limited on Darwin 5.x because of
-the use of zsh as the default system shell.
 
 Libtool's home page is:
 
@@ -71,63 +22,138 @@ See the file INSTALL for instructions on how to build and install
 libtool.
 
 See the info node (libtool)Tested Platforms. (or the file
-doc/PLATFORMS) for a list of platforms that libtool shared library
-support was tested on.
+doc/PLATFORMS) for a list of platforms that libtool supports.
+
+
+2. Reporting Bugs
+=================
 
 If you have any suggestions or bug reports, or you wish to port
 libtool to a new platform, please send electronic mail to the libtool
 mailing list <libtool@gnu.org> or bug reports to <bug-libtool@gnu.org>.
-Don't forget to mention the version of libtool that you are currently
-using (by typing `libtool --version').
+Be sure to send us your information from the end of the help message
+given by `./libtool --help'.
+
+
+3. The Test Suite
+=================
+
+Libtool comes with an integrated set of tests to check that your build
+is sane.  You can run the entire suite like this:
+
+  make check
+
+The tests run in groups in the various demo subdirectories, so if one
+of the tests early in a group FAILs, the rest of the tests in that
+group will be SKIPPED.  If you see a FAIL further into a group, even
+if a test with the same name PASSes in another test group, you need to
+take note of the name of the first test in the group if you want to
+rerun the group with FAILures to get verbose output.
+
+To run a test group in isolation (say, you think you have fixed a bug,
+but don't want to rerun the entire suit), you can do it like this:
+
+  make check TESTS='cdemo-static.test cdemo-make.test cdemo-exec.test'
+
+Providing that you have a FAIL from the most recent group from a
+particular demo directory (like the cdemo-static.test group above), you
+can explore the state of the directory to help with debugging.
+
+If you wish to report a test group failure to the libtool list, you
+need to send the verbose output of the FAILing group, along with the
+information from the end of `$(top_builddir)/libtool --help' to the
+bug report mailing list, <bug-libtool@gnu.org>.  From a bourne
+compatible shell, you can generate verbose test output like this:
+
+  VERBOSE=1 make check \
+  TESTS='cdemo-static.test cdemo-make.test cdemo-exec.test' \
+  | tee cdemo-static-group.log
+
+
+4. Version Numbering
+====================
 
 People have complained that they find the version numbering scheme
-under which libtool is released confusing... it works like this:
+under which libtool is released confusing... so we've changed it!
+
+It works like this:
 
 	<major-number>.<minor-number>
 
 Releases with a <major-number> less than 1 were not yet feature
-complete.  If libtool ever undergoes a major rewrite or substantial
-restructuring, the <major-number> will be incremented again.  In the
-mean time, whenever we make a stable release it will have its 
-<minor-number> incremented with respect to the previous stable
-release.
+complete.  Releases with a <major-number> of 1 used the old numbering
+scheme that everyone disliked so much.  Releases with a <major-number>
+of 2 us the new scheme described here.  If libtool ever undergoes a
+major rewrite or substantial restructuring, the <major-number> will be
+incremented again.
 
-So that alpha releases can be distinguished from stable releases,
-we append a letter to them, starting with `a' and continuing
-alphabetically:
+If we make a patch release to fix bugs in a stable release, we use a
+third number, so:
 
-	<major-number>.<minor-number><alpha> 
+      <major-number>.<minor-number>.<micro-number>
 
-Since alpha releases are start with the code of a previous stable
-release, the <major-number> and <minor-number> are the same as the
-stable release they started with.  So release `1.3a' is the first
-alpha release after stable release `1.3', and so on.
+Version numbers are chosen to make it easy for users to decide two
+things:
 
-To complicate matters slightly we always increment the letter in the
-repository before *and* after making a release tarball.  This means
-that "odd" letters (a,c,e,g...) only exist in the repository, and
-"even" letters are used instantaneously for an alpha release.  For
-example, you can tell that libtool-1.3c is an alpha release that is a
-snapshot of the repository taken between official alpha releases
-1.3b and 1.3d.  Since the odd lettered alpha release number potentially
-cover many states of the tree, we somtimes qualify such releases by
-adding the cvs version of the ChangeLog:
+  Q: How `developed' is this release?
+  A: The higher the number, the better!
+  Q: How `stable' is this release?
+  A: - If the <minor-number> is even, it is a stable release, `2.0'.
+     - If the <minor-number> is odd, it is a development version with
+       new features compared to the last stable release, `2.1a'.
+     - If it has an `odd'[1] letter after the version number,  it is a
+       snapshot direct from CVS, `2.1a'.
+     - If it has an `even'[1] letter after the version number, it is an
+       alpha quality release, `2.1b'.
+     - If it has three numbers in the version, it is a patch release,
+       fixing bugs from the stable release (with no new features), `2.0.1'.
 
-	$ libtool --version
-	ltmain.sh (GNU libtool) 1.3c (1.666 2000/01/14 13:50:21)
+[1] We always increment the letter in the repository before *and* after
+    making a release tarball.  This means that "odd" letters
+    (a,c,e,g...) only exist in the repository, and "even" letters are
+    used instantaneously for an alpha release.  Since the odd lettered
+    version numbers cover many states of the tree, we also qualify them
+    by adding the cvs version of the ChangeLog:
 
-Finally, if we need to make a patch release to fix bugs in a stable
-release, and the development on the trunk has made the tree unstable,
-we use a third number, so:
+    $ libtool --version
+    ltmain.sh (GNU libtool 1.1603 2004/09/12 22:02:07) 2.1a
 
-	<major-number>.<minor-number>.<patch number>
+    Copyright (C) 2004  Free Software Foundation, Inc.
+    This is free software; see the source for copying conditions.  There is NO
+    warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-	$ libtool --version
-	ltconfig (GNU libtool) 1.3.4 (1.385.2.196 1999/12/07 21:47:57)
+For more details about version numbers, see:
 
-There might be several patch releases to the last stable release,
-and all happening concurrently with alpha releases.  For example,
-libtool-1.3.4 and libtool-1.3b might be available at the same time:
-`1.3.4' is the fourth patch release after stable release `1.3';
-`1.3b' is the first alpha release after stable release `1.3'.
+    http://www.gnu.org/software/libtool/contribute.html
 
+-- 
+Copyright (C) 2004 Free Software Foundation, Inc.
+
+The canonical source of this file is maintained with the
+GNU Libtool package.  Report bugs to bug-libtool@gnu.org.
+
+GNU Libtool is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License as
+published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+As a special exception to the GNU General Public License,
+if you distribute this file as part of a program or library that
+is built using GNU libtool, you may include it under the same
+distribution terms that you use for the rest of that program.
+
+GNU Libtool is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with GNU Libtool; if not, write to the Free Software
+Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
+02111-1307  USA
+
+
+Local Variables:
+mode: text
+fill-column: 72
+End:
